[tool.poetry]
name = "nichol_matcher"
version = "0.1.0"
description = ""
authors = ["Deepak Mallubhotla <dmallubhotla+github@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pdme = "^0.8.6"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
ipython = "^8.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
